# totem

./: .gitignore  README.md
totem/: README.md  gpio_check.py  package.json  test_nvme.py  tsconfig.json
totem/bitmap-generator/: package.json  tsconfig.json
totem/bitmap-generator/src/: index.ts
totem/bitmap-pipe/: package.json
totem/bitmap-pipe/src/: index.ts
totem/devices/eink/drivers/: waveshare_3in7_pi5.py
totem/go/: .gitignore  default_pet.go  egg_pet.go  go.mod  go.sum  main.go  pet.go  pet_commands.go  relay.go  totem.go
totem/go/pet/: default_pet.go  pet.go
totem/go/relay/: relay.go
totem/go/static/: index.html  pet-state.html
totem/python/: .gitignore  README.md  eink_quick_test.py  main.py  pyproject.toml  run_eink_alt_test.sh  system_test.py  test_eink_debug.py  test_eink_debug.sh  test_nvme.py  test_pi5_eink.py  test_storage_manager.py  totem-python.service  totem.toml
totem/python/assets/: README.md
totem/python/devices/: __init__.py
totem/python/devices/eink/: README.md  README_2IN13_DISPLAY.md  README_DRIVER.md  README_PI5.md  README_TROUBLESHOOTING.md  eink.py  eink_client.py  eink_service.py  mock_epd.py  pyproject.toml  waveshare_3in7.py
totem/python/devices/eink/drivers/: README_SW_CS.md  waveshare_2in13.py  waveshare_2in13_pi5.py  waveshare_2in13_pi5_sw_cs.py  waveshare_3in7.py  waveshare_3in7_pi5.py  waveshare_wrapper.py
totem/python/devices/eink/waveshare_epd/: __init__.py
totem/python/devices/nfc/: nfc.py  pyproject.toml
totem/python/devices/nfc/drivers/: ACR122.py  PNC532.py  mock_nfc.py
totem/python/devices/nvme/: nvme.py  pyproject.toml
totem/python/devices/nvme/drivers/: filesystem.py  generic_nvme.py
totem/python/devices/wifi/: pyproject.toml  wifi.py
totem/python/devices/wifi/drivers/: mock_wifi.py  rpi5_onboard_wifi.py  usb_wifi_adapter.py
totem/python/examples/: README_TESTING.md  direct_display_image.py  display.py  display_image_file.py  eink_display_example.py  eink_driver_test.py  install_waveshare_driver.py  network.py  nfc.py  run_direct_test.py  run_eink_service.py  run_manufacturer_test.sh  service_display_image.py  simple_display_example.py  unix_socket_display.py
totem/python/examples/manufacturer/: README.md  epd_2in13_V4_test.py  epd_3in7_test.py
totem/python/managers/: __init__.py  display_manager.py  network_manager.py  nfc_manager.py  nvme_manager.py  storage_manager.py
totem/python/scripts/: deploy.sh  diagnose_eink.py  eink_diagnostics.py  eink_quick_test.py  eink_service_status.py  fix_eink.sh  fix_eink_dependencies.sh  format_nvme.py  gpio_cleanup.py  gpio_diagnostics.py  hardware_check.py  install_eink_service.py  install_totem.sh  run_eink_debug.sh  run_eink_test.sh  run_tests_sudo.sh  setup_dependencies.sh  setup_network_routing.sh  setup_pi_system.sh  setup_wifi_hotspot.sh  start_eink_service.py  stop_eink_service.py  test.sh  test_2in13_eink.py  test_eink_commands.py  test_eink_debug.sh  test_eink_sw_cs.py  test_eink_system.sh  test_pi5_eink.py
totem/python/scripts/eink/: run_eink_test.sh
totem/python/service/: __init__.py  device_service.py  event_manager.py  main.py  models.py
totem/python/src/: __init__.py
totem/python/tests/: README.md  eink_diag.py  eink_emulate_manufacturer.py  eink_gpio_debug.py  eink_message.py  eink_pi5_test.py  eink_pi_test.py  eink_simple_test.py  run_eink_alt_pins_test.sh  run_eink_diagnostics.sh  run_eink_final_test.sh  run_eink_nvme_compatible.sh  run_eink_nvme_test.sh  run_eink_sw_cs_test.sh  run_tests_sudo.sh  simple_gpio_test.py  system_test.py  test_eink_alt_pins.py  test_eink_debug.py  test_eink_diagnostics.py  test_eink_pattern.py  test_eink_sw_cs.py  test_exact_driver.py  test_gpio_pins.py  test_nfc_PNC532.py  test_nvme.py  test_pi5_eink.py  test_storage_manager.py
totem/python/tests/eink/: eink_nvme_conflict_test.py  eink_pi5_test.py  eink_quick_test.py  eink_spi_alt_test.py  eink_spi_test.py  test_eink_alt_pins.py  test_eink_service.py  test_exact_driver.py  test_pi5_eink.py
totem/python/utils/: __init__.py  logger.py
totem/screen-generator/: pnpm-lock.yaml
totem/screen-generator/src/: index.ts
totem/screen-pipe/: package.json  tsconfig.json
totem/screen-pipe/src/: index.ts  utils.ts
totem/totem-frontend/: .gitignore  package.json  svelte.config.js  vite.config.ts
totem/totem-frontend/src/lib/: crypto-browserify.d.ts  polyfills.ts
totem/totem-frontend/src/lib/services/: nostr.ts
totem/totem-frontend/src/lib/stores/: pets.ts  stage.ts
totem/totem-frontend/src/routes/: +layout.svelte  +page.svelte  Pet.svelte
totem/totem-frontend/src/routes/alive/: PetStats.svelte
totem/totem-frontend/src/routes/birth/: +layout.svelte
totem/totem-frontend/src/routes/birth/alive/: +page.svelte
totem/totem-frontend/src/routes/dash/: +page.svelte
totem/totem-frontend/src/routes/death/: +layout.svelte  +page.svelte
totem/totem-frontend/src/routes/egg/: +page.svelte
totem/totem-frontend/src/routes/intro/: +page.svelte  AboutPage.svelte  AboutTotem.svelte
totem/totem/python/scripts/: install_totem.sh  mount_nvme_boot.sh  nvme-mount.service  setup_nvme_auto_mount.sh  setup_nvme_mount.sh
