[tool.poetry]
name = "totem"
version = "0.1.0"
description = "Hardware control application for Raspberry Pi"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "managers" }, 
    { include = "devices" },
    { include = "utils" },
    { include = "service" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pillow = ">=9.2.0,<12.0.0"
numpy = ">=1.23.0"
fastapi = "^0.110.0"
uvicorn = "^0.30.0"
websockets = "^12.0.0"
pydantic = "^2.6.0"
python-multipart = "^0.0.9"

# Optional dependencies for Raspberry Pi hardware
RPi-GPIO = { version = "^0.7.1", optional = true, markers = "sys_platform == 'linux'" }
spidev = { version = "^3.6", optional = true, markers = "sys_platform == 'linux'" }
gpiozero = { version = "^2.0", optional = true, markers = "sys_platform == 'linux'" }

eink-device = { path = "./devices/eink" }
nfc-device = { path = "./devices/nfc" }
wifi-device = { path = "./devices/wifi" }
nvme-device = { path = "./devices/nvme" }

[tool.poetry.extras]
raspberry-pi = ["RPi-GPIO", "spidev", "gpiozero"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
system-test = "system_test:main"
serve = "service.main:start_server"
#init = "totem.init:main"