[tool.poetry]
name = "totem"
version = "0.1.0"
description = "Hardware control application for Raspberry Pi"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "managers" }, 
    { include = "devices" },
    { include = "utils" },
    { include = "service" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pillow = ">=9.2.0,<12.0.0"
numpy = ">=1.23.0"
fastapi = "^0.110.0"
uvicorn = "^0.30.0"
websockets = "^12.0.0"
pydantic = "^2.6.0"
python-multipart = "^0.0.9"

# Optional dependencies for Raspberry Pi hardware
RPi-GPIO = { version = "^0.7.1", optional = true, markers = "sys_platform == 'linux'" }
spidev = { version = "^3.6", optional = true, markers = "sys_platform == 'linux'" }
gpiozero = { version = "^2.0", optional = true, markers = "sys_platform == 'linux'" }

eink-device = { path = "./devices/eink" }
nfc-device = { path = "./devices/nfc" }
wifi-device = { path = "./devices/wifi" }
nvme-device = { path = "./devices/nvme" }

[tool.poetry.extras]
raspberry-pi = ["RPi-GPIO", "spidev", "gpiozero"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
system-test = "tests.system_test:main"
serve = "service.main:start_server"
eink-debug = "tests.test_eink_debug:main"
eink-pattern = "tests.test_eink_pattern:main"
nvme-test = "tests.test_nvme:main"
storage-test = "tests.test_storage_manager:main"
pi5-eink-test = "tests.test_pi5_eink:main"
eink-quick-test = "tests.eink_quick_test:main"
eink-diag = "tests.eink_diag:main"
gpio-test = "tests.simple_gpio_test:main"
eink-gpio-debug = "tests.eink_gpio_debug:main"
#init = "totem.init:main"