[tool.poetry]
name = "nfc-device"
version = "0.1.0"
description = "NFC drivers for Totem"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "devices" }]

[tool.poetry.dependencies]
python = "^3.9"
pyscard = { version = "^2.0.2", optional = true, markers = "sys_platform == 'linux'" }
pyserial = "^3.5"

[tool.poetry.extras]
hardware = ["pyscard"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
