[tool.poetry]
name = "nvme-device"
version = "0.1.0"
description = "NVMe storage drivers for Totem"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "**/*.py" }]

[tool.poetry.dependencies]
python = "^3.9"
pyudev = { version = "^0.23.2", optional = true, markers = "sys_platform == 'linux'" }

[tool.poetry.extras]
hardware = ["pyudev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"